flex/flex-tests/testData/as_regexp/NamedGroup.as
var namedGroup:RegExp = /(?P<name>group)/
var namedGroup2:RegExp = /<error descr="This named group syntax is not supported">(?<name>group)</error>/
var namedGroup3:RegExp = /<error descr="This named group syntax is not supported">(?'name'group)</error>/